--- a/css/star-css.html
+++ b/css/star-css.html
@@ -8,6 +8,8 @@
       font-size: 50px;
     }
   </style>
+  
+  <body>
   <h1 style="color: red;">
     python is good for ai
   </h1>
@@ -16,6 +18,6 @@
 
   
 
-  
+  </head>
 </body>
 </html>
